--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "packages/6K-Labs"]
 	path = packages/6K-Labs
 	url = https://github.com/lgc2333/BetterNCM-6K-Labs
+[submodule "packages/What-Is-The-Volume-Percent-Now"]
+	path = packages/What-Is-The-Volume-Percentage-Now
+	url = https://github.com/lgc2333/BetterNCM-What-Is-The-Volume-Percentage-Now
