--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "version": "0",
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "private/*"
   ],
   "devDependencies": {
     "@cordisjs/eslint-config": "^1.1.1",
     "@types/node": "^22.10.1",
     "@types/react": "^16.14.0",
     "@types/react-dom": "^16.9.24",
-    "esbuild": "^0.24.0",
+    "esbuild": "^0.25.0",
     "eslint": "^8.57.1",
     "prettier": "^3.3.3",
     "tsx": "^4.19.2",
